--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: home
-title: Bblog
-description: "Ducatto Blog"
-headline: EV Diary
-tags: [Ducatto, Fiat, Van, camping, blog]
+title: Blog
+description: "Latinamerica Bicycle Blog"
+headline: Latinamerica by Bike
+tags: [cycling, camping, blog]
 ---
+hallo
 {% if site.paginate %}
 	{% for post in paginator.posts %}
     <article class="notepad-index-post post row">
