--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 ---
 layout: home
-title: Blog
-description: "Latinamerica Bicycle Blog"
-headline: Latinamerica by Bike
+lang: en
 tags: [cycling, camping, blog]
 ---
-hallo
 {% if site.paginate %}
 	{% for post in paginator.posts %}
     <article class="notepad-index-post post row">
