--- a/start.html
+++ b/start.html
@@ -4,6 +4,9 @@ lang: de
 ref: index
 tags: [cycling, camping, blog]
 ---
+
+Deutsche seite?
+
 {% if site.paginate %}
 	{% for post in paginator.posts %}
     <article class="notepad-index-post post row">
