--- a/start.html
+++ b/start.html
@@ -7,6 +7,10 @@ tags: [cycling, camping, blog]
 
 Deutsche seite?
 
+{{ site.posts }}
+
+geht
+
 {% if site.paginate %}
 	{% for post in paginator.posts %}
     <article class="notepad-index-post post row">
