--- a/archive-de.html
+++ b/archive-de.html
@@ -4,7 +4,7 @@ lang: de
 ref: archive
 ---
     {% assign langposts=site.posts | where:"lang", page.lang %}
-    {% assign posts=langposts | where:"archive", false %}
+    {% assign posts=langposts | where:"archive", true %}
     {% for post in posts %}
     <article class="notepad-index-post post row">
         <div class="small-12 medium-3 large-2 columns datetime">
