--- a/kategorien.html
+++ b/kategorien.html
@@ -1,11 +1,10 @@
 ---
 layout: page
-lang: en
-title: Category Index
-permalink: /categories/index.html
-title: Category Index
-tags: [Categories]
-description: "An archive of posts sorted by categories."
+lang: de
+title: Kategorien Index
+permalink: /kategorien/index.html
+tags: [Kategorien]
+description: "Post archive sortiert nach Kategorie."
 
 ---
 
