--- a/archive-de.html
+++ b/archive-de.html
@@ -11,7 +11,7 @@ ref: archive
               {{ post.date | date: "%d.%m.%Y" }}
         </div>
         <div class="small-12 medium-9 large-10 columns">
-          <a href="{{ site.baseurl }}{{ post.url }}">
+          <a href="{{ site.url }}/{{ post.url }}">
 	    {{ post.title }}
           </a>
         </div>
