change display track

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ tags: [cycling, camping, blog]
     {% for post in posts %}
     
     {% if post.category == "track" %} 
-    // we do nothing 
+    <!-- we do nothing -->
     {% else if %} 
-    // if it's another category, we display the article 
+    <!-- if it's another category, we display the article -->
        
     <article class="notepad-index-post post row">
         <div class="small-12 medium-3 large-2 columns datetime">
