--- a/playground2.html
+++ b/playground2.html
@@ -19,7 +19,7 @@ zoom: 8
 }
 
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap"
 async defer></script>
     
     
