--- a/playground2.html
+++ b/playground2.html
@@ -6,21 +6,18 @@ ref: playground2
  
 include map
 
+    <div id="map"></div>
+    <script type="text/javascript">
 
-<div id="map"></div>
-<script>
+var map;
 function initMap() {
-        // Create a map object and specify the DOM element for display.
-var map = new google.maps.Map(document.getElementById('map'), {
-center: {lat: -34.397, lng: 150.644},
-scrollwheel: false,
-zoom: 8
-});
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: -34.397, lng: 150.644},
+    zoom: 8
+  });
 }
 
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap"
-async defer></script>
-    
-    
- 
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap">
+    </script>
