--- a/playground2.html
+++ b/playground2.html
@@ -6,7 +6,7 @@ ref: playground2
  
 include map
 
-    <div id="map"></div>
+    <div id="map" style="height: 400px;width:600px;"></div>
     <script type="text/javascript">
 
 var map;
