--- a/playground2.html
+++ b/playground2.html
@@ -11,11 +11,22 @@ include map
 
 var map;
 function initMap() {
+ var myLatLng = {lat: -25.363, lng: 131.044};
+
   map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: -34.397, lng: 150.644},
     zoom: 8
+    center: myLatLng
+ 
+ 
+  var marker = new google.maps.Marker({
+    position: myLatLng,
+    map: map,
+    title: 'Hello World!'
   });
 }
+
+
 
     </script>
     <script async defer
