--- a/playground2.html
+++ b/playground2.html
@@ -23,6 +23,16 @@ function initMap() {
     map: map,
     title: 'Hello World!'
   });
+  
+  
+  
+  var image = 'images/beachflag.png';
+  var beachMarker = new google.maps.Marker({
+    position: {lat: -33.890, lng: 151.274},
+    map: map,
+    icon: image
+  });
+
 }
 
 
