--- a/playground2.html
+++ b/playground2.html
@@ -26,7 +26,7 @@ function initMap() {
   
   
   
-  var image = 'images/beachflag.png';
+  var image = 'images/team.jpg';
   var beachMarker = new google.maps.Marker({
     position: {lat: -33.890, lng: 151.274},
     map: map,
