--- a/playground2.html
+++ b/playground2.html
@@ -61,7 +61,8 @@ function initMap() {
       '</div>';
       
 var infowindow = new google.maps.InfoWindow({
-    content: image
+   // content: contentString
+    content: '<IMG BORDER="0" ALIGN="Left" SRC="images/team.jpg"> '
   });
 
   var marker = new google.maps.Marker({
