--- a/playground2.html
+++ b/playground2.html
@@ -78,7 +78,7 @@ var infowindow2 = new google.maps.InfoWindow({
     title: 'Uluru (Ayers Rock)'
   });
   marker.addListener('click', function() {
-    infowindow.open(map, marker2);
+    infowindow2.open(map, marker2);
   });
 
 }
