--- a/playground2.html
+++ b/playground2.html
@@ -130,13 +130,18 @@ var infowindow2 = new google.maps.InfoWindow({
 
    
 //own marker clusters
-locations=[["images/martha.jpg",-30.33,145.77],["images/team.jpg",-29,145.56]]
+locations=[['<IMG BORDER="0" ALIGN="Left" SRC="images/martha.jpg"> ',-30.33,145.77],['<IMG BORDER="0" ALIGN="Left" SRC="images/team.jpg"> ',-29,145.56]]
 var gmarkers = [];
     for (var i = 0; i < locations.length; i++) {
             var marker = new google.maps.Marker({
             position: new google.maps.LatLng(locations[i][1], locations[i][2]),
             map: map
             });
+            
+            gmarkers.addListener('click', function() {
+    infowindow2.open(map, gmarkers);
+  });
+
 
        google.maps.event.addListener(marker, 'mouseover', (function (marker, i) {
             return function () {
