--- a/playground2.html
+++ b/playground2.html
@@ -8,8 +8,11 @@ include map
 
 <div id="map_wrapper"> <div id="map_canvas" class="mapping"></div> </div>
 
+   <div id="map" style="height: 400px;width:600px;"></div>
+    <script type="text/javascript">
 
-#map_wrapper { height: 400px; } #map_canvas { width: 100%; height: 100%; }
+
+//#map_wrapper { height: 400px; } #map_canvas { width: 100%; height: 100%; }
 
 jQuery(function($) { 
 
@@ -73,4 +76,8 @@ var script = document.createElement('script');
     
 }
 
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap">
+    </script>
  
