--- a/playground2.html
+++ b/playground2.html
@@ -6,7 +6,7 @@ ref: playground2
  
 include map
 
-<div id="map_wrapper"> <div id="map_canvas" class="mapping"></div> </div>
+//<div id="map_wrapper"> <div id="map_canvas" class="mapping"></div> </div>
 
    <div id="map" style="height: 400px;width:600px;"></div>
     <script type="text/javascript">
