--- a/playground2.html
+++ b/playground2.html
@@ -20,7 +20,8 @@ var script = document.createElement('script');
  var map; 
  var bounds = new google.maps.LatLngBounds(); var mapOptions = { mapTypeId: 'roadmap' }; 
  
- // Display a map on the page map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions); map.setTilt(45); 
+ // Display a map on the page 
+ map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions); map.setTilt(45); 
 
 // Multiple Markers
     var markers = [
