--- a/playground2.html
+++ b/playground2.html
@@ -6,8 +6,9 @@ ref: playground2
  
 include map
 
-   <div id="map" style="height: 400px;width:600px;"></div>
-    <script type="text/javascript">
+<div id="map_wrapper"> <div id="map_canvas" class="mapping"></div> </div>
+
+ #map_wrapper { height: 400px; } #map_canvas { width: 100%; height: 100%; }
 
 
 jQuery(function($) { 
