--- a/playground2.html
+++ b/playground2.html
@@ -11,12 +11,12 @@ include map
 
  var map;
 function initMap() {
-  var uluru = {lat: -26.363, lng: 130.044};
+ // var uluru = {lat: -26.363, lng: 130.044};
  
- var myLatLng = {lat: -25.363, lng: 131.044};
+// var myLatLng = {lat: -25.363, lng: 131.044};
 
   map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: -34.397, lng: 150.644},
+    center: {lat: 35.397, lng: 0.644},
     zoom: 4
   });
  
@@ -25,8 +25,8 @@ function initMap() {
 
 // Multiple Markers
     var markers = [
-        ['London Eye, London', -51.503454,130.119562],
-        ['Palace of Westminster, London', -51.499633,129.124755]
+        ['London Eye, London', 51.503454,0.119562],
+        ['Palace of Westminster, London', 51.499633,0.124755]
     ];
                         
     // Info Window Content
