--- a/playground2.html
+++ b/playground2.html
@@ -265,7 +265,7 @@ for (var i = 0; i < location.length; i++) {
             map: map,
             title: location[i][0],
            // info: imagealign+plantinfo
-            info: '<div style="width: 650px; height 450px"><IMG BORDER="0" ALIGN="Left" SRC=location[i][3]></div>'+plantinfo
+            info: '<div style="width: 650px; height 450px"></div><IMG BORDER="0" ALIGN="Left" SRC=location[i][3]>'+plantinfo
             
            // '<IMG BORDER="0" ALIGN="Left" SRC="images/team.jpg"> '
             
