--- a/playground2.html
+++ b/playground2.html
@@ -327,15 +327,15 @@ var markerCluster = new MarkerClusterer(map, markers, {imagePath: 'https://devel
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
   
-  <!--mit key
-  //<script async defer
-   // src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap">
-  //</script>
+  <!-- mit key -->
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5jgw5Jza7pNam0BIMFydX2wl_LtWC89k&callback=initMap">
+  </script>
   
   -->
  <!-- //ohne key
  -->
-  <script async defer
+<!--  <script async defer
    src="https://maps.googleapis.com/maps/api/js?callback=initMap">
   </script>
-  
+  -->
