--- a/playground2.html
+++ b/playground2.html
@@ -7,7 +7,7 @@ ref: playground2
 <!--include map
 -->
     <!-- <div id="map" style="height: 600px;width:800px;"></div> -->
-    <div id="map" style="height: 100%;width:90%;"></div>
+    <div id="map" style="height: 600 px;width:90%;"></div>
     
     <script type="text/javascript">
 
