--- a/playground2.html
+++ b/playground2.html
@@ -6,9 +6,9 @@ ref: playground2
  
 <!--include map
 -->
-    <!-- <div id="map" style="height: 600px;width:800px;"></div> -->
-    <div id="map" style="height: 600 px;width:90%;"></div>
-    
+    <div id="map" style="height: 600px;width:800px;"></div>
+    <!--<div id="map" style="height: 600 px;width:90%;"></div>
+   --> 
     <script type="text/javascript">
 
 var map;
