--- a/playground2.html
+++ b/playground2.html
@@ -285,7 +285,7 @@ for (var i = 0; i < location.length; i++) {
             map: map,
             title: location[i][0],
            // info: imagealign+plantinfo
-            info: <IMG style="width:400px; height: 300px" BORDER="0" ALIGN="Left" SRC="'+location[i][3]+'">'+plantinfo
+            info: '<IMG style="width:400px; height: 300px" BORDER="0" ALIGN="Left" SRC="'+location[i][3]+'">'+plantinfo
             //info: '<IMG BORDER="0" ALIGN="Left" SRC="'+location[i][3]+'"'+plantinfo
             //'<div style="width: 650px; height 450px">
             
