--- a/playground2.html
+++ b/playground2.html
@@ -287,7 +287,7 @@ for (var i = 0; i < location.length; i++) {
             map: map,
             title: location[i][0],
            // info: imagealign+plantinfo
-            info: '<IMG style="width:80%" BORDER="0" ALIGN="Left" SRC="'+location[i][3]+'">'+plantinfo
+            info: '<p><IMG style="width:80%" BORDER="0" ALIGN="Left" SRC="'+location[i][3]+'"></p>'+plantinfo
            //'<div style="width: 650px; height 450px">
             
             
