--- a/plantmap.html
+++ b/plantmap.html
@@ -8,16 +8,17 @@ tags: [plants, geolocated]
 chart: true
 ---
  
-<h>Plants found on our way</h>
+<h1>Plants found on our way</h1>
 
 <p> I, Martha, discovered these plants and many more while we travel with our bicycles. If you know some of them, give me a hind. I have no identification tools with me and the internet is quite bad. </p> 
 <p> This map is a programming challenge for Martha and will be further developped. If something does not work correctly or if there are some nice features you would like to have just let her know. </p>
+<p> With more time more pictures might be uploaded as some of the earlier pictures do not have a geolocation. Anyways, I will try to update them based on our gpx-tracks and time-coding.  </p>
  
 <!--include map
 -->
    <!-- <div id="map" style="height: 600px;width:800px;"></div>
    --> 
-    <div id="map" style="width:80%; height:500px !important"></div>
+    <div id="map" style="width:90%; height:500px !important"></div>
     <!--<div id="map" style="height: 600 px;width:90%;"></div>
    --> 
     <script type="text/javascript">
