--- a/plantmap.html
+++ b/plantmap.html
@@ -6,13 +6,14 @@ permalink: /plantmap
 title: PlantMap
 tags: [plants, geolocated]
 chart: true
+comments: true
 ---
  
 <h1>Plants found on our way</h1>
 
-<p> I, Martha, discovered these plants and many more while we travel with our bicycles. If you know some of them, give me a hind. I have no identification tools with me and the internet is quite bad. </p> 
-<p> This map is a programming challenge for Martha and will be further developped. If something does not work correctly or if there are some nice features you would like to have just let her know. </p>
-<p> With more time more pictures might be uploaded as some of the earlier pictures do not have a geolocation. Anyways, I will try to update them based on our gpx-tracks and time-coding.  </p>
+<p> I, Martha, discovered these plants and many more while we travel with our bicycles. If you know some of them, give me a hint. I have no identification tools with me and the internet is quite bad. </p> 
+<p> This map is a programming challenge for me and will be further developed. If something does not work correctly or if there are some nice features you would like to have just let me know. </p>
+<p> With more time more pictures  and information will be uploaded. The scripts I wrote use python and the google api. Some pictures have gps coordinates by my camera. For all the others, I use python to get geolocations, eiher based on the gpx tracks or because of similar time stamps. The tags of the pictures are converted for the infobox. Then I use the google-api and place the pictures on the map and cluster them. At the moment I program a tropicos request to get more information about the plants.  </p>
  
 <!--include map
 -->
