--- a/plantmap.html
+++ b/plantmap.html
@@ -13,7 +13,7 @@ comments: true
 
 <p> I, Martha, discovered these plants and many more while we travel with our bicycles. If you know some of them, give me a hint. I have no identification tools with me and the internet is quite bad. </p> 
 <p> This map is a programming challenge for me and will be further developed. If something does not work correctly or if there are some nice features you would like to have just let me know. </p>
-<p> With more time more pictures  and information will be uploaded. The scripts I wrote use python and the google api. Some pictures have gps coordinates by my camera. For all the others, I use python to get geolocations, eiher based on the gpx tracks or because of similar time stamps. The tags of the pictures are converted for the infobox. Then I use the google-api and place the pictures on the map and cluster them. At the moment I program a tropicos request to get more information about the plants.  </p>
+<p> With more time more pictures  and information will be uploaded. The scripts I wrote use python and the google map api. Some pictures have gps coordinates by my camera. For all the others, I use python to get geolocations, eiher based on the gpx tracks or because of similar time stamps. The tags of the pictures are converted for the infobox. Tropicos.org is used to get some more information of the plants Then I use the google-api and place the pictures on the map and cluster them.   </p>
  
 <!--include map
 -->
