--- a/plantmap.html
+++ b/plantmap.html
@@ -13,7 +13,7 @@ comments: true
 
 <p> I, Martha, discovered these plants and many more while we travel with our bicycles. If you know some of them, give me a hint. I have no identification tools with me and the internet is quite bad. </p> 
 <p> This map is a programming challenge for me and will be further developed. If something does not work correctly or if there are some nice features you would like to have just let me know. </p>
-<p> With more time more pictures  and information will be uploaded. The scripts I wrote use python and the google map api. Some pictures have gps coordinates by my camera. For all the others, I use python to get geolocations, eiher based on the gpx tracks or because of similar time stamps. The tags of the pictures are converted for the infobox. Tropicos.org is used to get some more information of the plants Then I use the google-api and place the pictures on the map and cluster them.   </p>
+<p> With more time more pictures  and information will be uploaded. The scripts I wrote use python and the google map api. Some pictures have gps coordinates by my camera. For all the others, I use python to get geolocations, eiher based on the gpx tracks or because of similar time stamps. The tags of the pictures are converted for the infobox. Tropicos.org is used to get some more information of the plants. Finally, I use the google-api and place the pictures on the map and cluster them.   </p>
  
 <!--include map
 -->
@@ -436,7 +436,7 @@ for (var i = 0; i < location.length; i++) {
         var marker = new google.maps.Marker({
             position: new google.maps.LatLng(location[i][1], location[i][2]),
             map: map,
-            icon= image,
+            icon:  image,
             title: location[i][0],
            // info: imagealign+plantinfo
             info: '<div><IMG style="width:80%" BORDER="0" ALIGN="Left" SRC="'
@@ -506,14 +506,14 @@ var markerCluster = new MarkerClusterer(map, markers, mcOptions, {imagePath: 'ht
   </script>
   
   <!-- mit key für latinamerica.bike-->
-  <script async defer
+ <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBGUbzd2qRVASxEj8HhTZYcCl3dbM37l0&callback=initMap">
   </script>
   
  
  <!-- //ohne key
  -->
-<!--  <script async defer
+ <!-- <script async defer
    src="https://maps.googleapis.com/maps/api/js?callback=initMap">
   </script>
-  -->
+ --> 
